Package name changed. Need to add icon and attributions.

--- a/app/src/main/res/layout/activity_news.xml
+++ b/app/src/main/res/layout/activity_news.xml
@@ -7,7 +7,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:background="@color/colorPrimary"
-    tools:context="com.example.sarat.news.NewsActivity">
+    tools:context="com.dev.sarat.news.NewsActivity">
 
     <android.support.design.widget.AppBarLayout
         android:id="@+id/appbar"
