--- a/app/src/main/res/layout/fragment_common_list.xml
+++ b/app/src/main/res/layout/fragment_common_list.xml
@@ -4,7 +4,7 @@
     android:layout_height="match_parent"
     android:layout_margin="16dp"
     android:orientation="vertical"
-    tools:context="com.example.sarat.news.fragments.General">
+    tools:context="com.dev.sarat.news.fragments.General">
 
     <ListView
         android:id="@+id/listView"
