--- a/app/src/main/res/layout/news_item.xml
+++ b/app/src/main/res/layout/news_item.xml
@@ -16,7 +16,7 @@
         <RelativeLayout
             android:padding="4dp"
             android:layout_width="match_parent"
-            android:background="@android:color/holo_blue_light"
+            android:background="#0000"
             android:layout_height="match_parent">
 
             <TextView
@@ -25,7 +25,7 @@
                 android:layout_height="wrap_content"
                 android:padding="4dp"
                 android:textSize="16sp"
-                android:textColor="#fff"
+                android:textColor="#000"
                 android:textStyle="bold"
                 tools:text="Sample title"/>
 
@@ -35,7 +35,7 @@
                 android:layout_height="wrap_content"
                 android:layout_below="@id/titleTextView"
                 android:padding="4dp"
-                android:textColor="#fff"
+                android:textColor="#000"
                 android:textStyle="bold"
                 tools:text="@string/dummyText"/>
 
@@ -51,7 +51,7 @@
                 android:paddingStart="4dp"
                 android:paddingEnd="4dp"
                 android:textAllCaps="true"
-                android:textColor="#fff"
+                android:textColor="#000"
                 android:textStyle="bold"
                 android:textSize="12sp"
                 android:fontFamily="monospace"
@@ -71,7 +71,7 @@
                 android:paddingTop="16dp"
                 tools:text="2017-11-31 12:00:55"
                 android:textAllCaps="true"
-                android:textColor="#fff"
+                android:textColor="#000"
                 android:textStyle="bold"
                 android:textSize="12sp"
                 android:fontFamily="monospace"
