--- a/app/src/main/res/layout/news_item.xml
+++ b/app/src/main/res/layout/news_item.xml
@@ -26,7 +26,6 @@
                 android:padding="4dp"
                 android:textSize="16sp"
                 android:textColor="#000"
-                android:textStyle="bold"
                 tools:text="Sample title"/>
 
             <TextView
@@ -35,7 +34,7 @@
                 android:layout_height="wrap_content"
                 android:layout_below="@id/titleTextView"
                 android:padding="4dp"
-                android:textColor="#000"
+                android:textColor="#757575"
                 android:textStyle="bold"
                 tools:text="@string/dummyText"/>
 
@@ -53,8 +52,8 @@
                 android:textAllCaps="true"
                 android:textColor="#000"
                 android:textStyle="bold"
-                android:textSize="12sp"
-                android:fontFamily="monospace"
+                android:textSize="14sp"
+                android:fontFamily="sans-serif-condensed"
                 tools:text="Sarath Sattiraju"/>
 
             <TextView
@@ -73,8 +72,8 @@
                 android:textAllCaps="true"
                 android:textColor="#000"
                 android:textStyle="bold"
-                android:textSize="12sp"
-                android:fontFamily="monospace"
+                android:textSize="14sp"
+                android:fontFamily="sans-serif-condensed"
                 android:layout_below="@id/authorTextView"/>
 
 
