--- a/app/src/main/res/layout/news_item.xml
+++ b/app/src/main/res/layout/news_item.xml
@@ -17,7 +17,12 @@
             android:padding="4dp"
             android:layout_width="match_parent"
             android:background="#0000"
-            android:layout_height="match_parent">
+            android:layout_height="wrap_content">
+
+            <TextView
+                android:id="@+id/imageNews"
+                android:layout_width="match_parent"
+                android:layout_height="100dp" />
 
             <TextView
                 android:id="@+id/titleTextView"
@@ -26,6 +31,7 @@
                 android:padding="4dp"
                 android:textSize="16sp"
                 android:textColor="#000"
+                android:layout_below="@id/imageNews"
                 tools:text="Sample title"/>
 
             <TextView
@@ -79,7 +85,6 @@
 
 
         </RelativeLayout>
-
 
     </android.support.v7.widget.CardView>
 
