--- a/app/src/main/res/layout/activity_news.xml
+++ b/app/src/main/res/layout/activity_news.xml
@@ -89,7 +89,7 @@
     <android.support.v4.view.ViewPager
         android:id="@+id/viewPager"
         android:layout_width="match_parent"
-        android:background="#fff"
+        android:background="#e0e0e0"
         android:layout_height="0dp"
         android:layout_weight="6">
 
