--- a/app/src/main/res/layout/news_item.xml
+++ b/app/src/main/res/layout/news_item.xml
@@ -1,28 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <android.support.v7.widget.CardView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:elevation="8dp"
-        android:layout_margin="12dp">
-
-        <RelativeLayout
-            android:padding="4dp"
-            android:layout_width="match_parent"
-            android:background="#0000"
-            android:layout_height="wrap_content">
-
           <ImageView
                 android:contentDescription="@string/dummyText"
                 android:id="@+id/imageNews"
+                android:src="@drawable/placeholder"
                 android:layout_width="match_parent"
                 android:layout_height="200dp"
+                android:layout_margin="12dp"
                 android:scaleType="fitXY"/>
 
             <TextView
@@ -31,11 +21,10 @@
                 android:layout_height="wrap_content"
                 android:layout_below="@id/imageNews"
                 android:fontFamily="@font/cabin_semibold"
-                android:padding="4dp"
+                android:padding="12dp"
                 android:textColor="#000"
                 android:textSize="16sp"
                 tools:text="Sample title" />
-
 
             <TextView
                 android:id="@+id/descriptionTextView"
@@ -43,7 +32,7 @@
                 android:layout_height="wrap_content"
                 android:layout_below="@id/titleTextView"
                 android:fontFamily="@font/cabin_semibold"
-                android:padding="4dp"
+                android:padding="10dp"
                 android:textColor="#757575"
                 android:textStyle="bold"
                 tools:text="@string/dummyText" />
@@ -53,12 +42,12 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@id/descriptionTextView"
-                android:paddingLeft="4dp"
-                android:paddingRight="4dp"
-                android:paddingBottom="4dp"
+                android:paddingLeft="10dp"
+                android:paddingRight="10dp"
+                android:paddingBottom="10dp"
                 android:paddingTop="16dp"
-                android:paddingStart="4dp"
-                android:paddingEnd="4dp"
+                android:paddingStart="10dp"
+                android:paddingEnd="10dp"
                 android:textAllCaps="true"
                 android:textColor="#000"
                 android:textStyle="bold"
@@ -72,10 +61,10 @@
                 android:layout_height="wrap_content"
                 android:layout_alignParentRight="true"
                 android:layout_alignParentEnd="true"
-                android:paddingLeft="4dp"
-                android:paddingRight="4dp"
-                android:paddingStart="4dp"
-                android:paddingEnd="4dp"
+                android:paddingLeft="10dp"
+                android:paddingRight="10dp"
+                android:paddingStart="10dp"
+                android:paddingEnd="10dp"
                 android:paddingBottom="8dp"
                 android:paddingTop="16dp"
                 tools:text="2017-11-31 12:00:55"
@@ -86,10 +75,4 @@
                 android:fontFamily="sans-serif-condensed"
                 android:layout_below="@id/authorTextView"/>
 
-
-
-        </RelativeLayout>
-
-    </android.support.v7.widget.CardView>
-
-</LinearLayout>
+</RelativeLayout>
