--- a/app/src/main/res/values/preloaded_fonts.xml
+++ b/app/src/main/res/values/preloaded_fonts.xml
@@ -3,6 +3,8 @@
     <array name="preloaded_fonts" translatable="false">
         <item>@font/allerta_stencil</item>
         <item>@font/cabin_semibold</item>
+        <item>@font/cedarville_cursive</item>
+        <item>@font/covered_by_your_grace</item>
         <item>@font/ultra</item>
     </array>
 </resources>
