--- a/app/src/main/res/drawable/ic_noun_lifeline__386761.xml
+++ b/app/src/main/res/drawable/ic_noun_lifeline__386761.xml
@@ -1,5 +1,5 @@
 <vector android:height="640dp" android:viewportHeight="640"
-    android:tint="#A8A8A8"
+    android:tint="#000"
     android:viewportWidth="512" android:width="523dp" xmlns:android="http://schemas.android.com/apk/res/android">
     <path android:fillColor="#FF000000" android:pathData="M175.5,287.9l21.2,-20.8l24.8,36.6c3.7,5.5 10,8.6 16.8,8.2c6.6,-0.4 12.5,-4.4 15.5,-10.4l20.5,-41.3l21.6,42.2c2.7,5.4 7.9,9.1 13.9,10c0.9,0.1 1.9,0.2 2.8,0.2c5,0 9.8,-2 13.4,-5.6l31.2,-31.9l86.3,-0.4l-0.2,-37.5l-94.1,0.4c-5,0 -9.8,2.1 -13.3,5.6l-18.5,18.9l-26.7,-52.2c-3.2,-6.3 -9.7,-10.2 -16.7,-10.2c0,0 -0.1,0 -0.1,0c-7.1,0 -13.5,4.1 -16.7,10.4L234.5,256L215,227.4c-3.1,-4.6 -8.1,-7.6 -13.7,-8.1c-5.5,-0.6 -11,1.4 -15,5.3l-31.7,31.2l-86.2,0.2l0.1,37.5l93.8,-0.2C167.3,293.2 172,291.3 175.5,287.9z"/>
     <path android:fillColor="#FF000000" android:pathData="M373,312.5l-20.3,20.7c-10.2,10.4 -24.2,16.3 -38.6,16.7c-22,21.3 -43.4,37.9 -58.1,48.4c-19.2,-13.8 -50,-37.9 -78.7,-69.6c-4.8,1.3 -9.7,2.1 -14.8,2.1l-32.1,0.1C184.9,400.7 256,443.4 256,443.4s83.6,-50.3 139.2,-131.1L373,312.5z"/>
