--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -112,9 +112,11 @@
             <ImageButton
                 android:id="@+id/more"
                 android:src="@drawable/ic_keyboard_arrow_right_black_24dp"
-                android:background="@android:color/transparent"
+                android:background="@drawable/round_button"
                 android:layout_gravity="center"
                 android:layout_width="wrap_content"
+                android:layout_marginStart="8dp"
+                android:layout_marginEnd="8dp"
                 android:layout_height="wrap_content"
                 android:onClick="openNavigationMenu"
                 android:contentDescription="@string/news_article_image" />
